kubernetes/media/office/onlyoffice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice
  namespace: media
  labels: 
    app: onlyoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlyoffice
  template:
    metadata:
      labels:
        app: onlyoffice
    spec:
      containers:
      - name: onlyoffice
        image: harbor.fnptr.net/docker/onlyoffice/documentserver
        ports:
          - containerPort: 80
            name: "http"
        volumeMounts:
          - mountPath: "/var/log/onlyoffice"
            name: onlyoffice-logs
      volumes:
      - name: onlyoffice-logs
        persistentVolumeClaim:
          claimName: onlyoffice-logs-claim
      securityContext:
        fsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onlyoffice
  name: onlyoffice
  namespace: media
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: onlyoffice
